[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ONE-api"
dynamic = ["version", "readme", "dependencies"]
description = "Open Neurophysiology Environment"
authors = [
    {name = "IBL Staff"},
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/int-brain-lab/ONE"

[tool.setuptools.dynamic]
version = {attr = "one.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}